kustomize/argocd-extra/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
spec:
  parentRefs:
    - name: eg-internal
      namespace: envoy-gateway-system
  hostnames:
    - argocd.tools.kilchhofer.info
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
