kustomize/argocd-extra/server-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-server-dex
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-server
  policyTypes:
    - Egress
  egress:
      # Allow to Dex
    - to:
      - ipBlock:
          # Metallb subnet
          cidr: 192.168.93.0/24
      ports:
      - port: 443
